Add warning to each page

--- a/docs/lesson/10.md
+++ b/docs/lesson/10.md
@@ -1,5 +1,7 @@
 # Lesson 10: Home page complete and recap
 
+<ContentWarning />
+ 
 We’re very nearly there with our home page now. All we’ve got to do is change the title and add a wrapper.
 
 Open up `eleventy-from-scratch/src/index.md` and change the `title` from “Hello, world” to “Issue 33”:
