--- a/docs/lesson/11.md
+++ b/docs/lesson/11.md
@@ -1,5 +1,7 @@
 # Lesson 11: Blog feeds, tags and pagination
 
+<ContentWarning />
+
 If you ask someone what Eleventy is, it’s pretty likely they’ll say it’s for making blogs and personal sites.
 
 We’ll learn that this isn’t always the case throughout this course. But we’re also going learn key skills that let us publish our own content in the future, too. After all, the end goal of this course is for us to feel confident to start _any_ Eleventy project, from scratch.
@@ -98,7 +100,7 @@ Because we have a shared interest, we’ll apply what we’ve already learned by
 
 Create a new file in your `layouts` folder called `feed.html` and add the following to it:
 
-<!-- prettier-ignore -->
+::: v-pre
 ```html
 {% extends "layouts/base.html" %}
 
@@ -107,10 +109,9 @@ Create a new file in your `layouts` folder called `feed.html` and add the follow
 {% set postListItems = pagination.items %}
 
 {% block content %}
-  <article>
-    {% include "partials/page-header.html" %}
-    {% include "partials/post-list.html" %}
-  </article>
+<article>
+  {% include "partials/page-header.html" %} {% include "partials/post-list.html" %}
+</article>
 {% endblock %}
 ```
 
@@ -174,6 +175,7 @@ Now that we have some HTML, we need to wire the data up to it. To do that, we’
 
 Create a new file in your `src` folder called `blog.md` and add the following Front Matter and content to it:
 
+::: v-pre
 ```
 ---
 title: 'The Issue 33 Blog'
@@ -352,3 +354,5 @@ If you go to <http://localhost:8080/tag/design-thinking/>, you should see someth
 ![A similar looking view but it shows the design thinking tag’s posts](/images/courses/learn-eleventy-from-scratch/tag-feed.jpg)
 
 Right, let’s mark up a blog post template!
+
+:::
