--- a/docs/lesson/12.md
+++ b/docs/lesson/12.md
@@ -1,5 +1,7 @@
 # Lesson 12: Blog post view, directory data and filters
 
+<ContentWarning />
+ 
 We’ve got all of our front-end feeds set up for the blog now, which is most of the battle. Now, let’s focus on rendering a blog post itself.
 
 ## Creating our blog post layout
