--- a/docs/lesson/13.md
+++ b/docs/lesson/13.md
@@ -1,5 +1,7 @@
 # Lesson 13: Recommended content
 
+<ContentWarning />
+ 
 In this last lesson on our blog, we’re going to add a “More from the blog” section to our layout. This will recommend some other posts to the reader once they reach the end of the post they’re on.
 
 We’ll use a helper function to show 3 posts, picked at random, and—most importantly—to make sure they don’t include the post the reader’s currently on.
