--- a/docs/lesson/14.md
+++ b/docs/lesson/14.md
@@ -1,5 +1,7 @@
 # Lesson 14: Adding our about page
 
+<ContentWarning />
+ 
 One thing that helps me to learn is **repetition**, so that’s what we’re going to do now by creating our ‘about’ page. This lesson features loads of stuff we already know. It’s time to commit it to memory.
 
 ## Add about page layout
@@ -106,7 +108,7 @@ permalink: '/about-us/index.html'
 
 Wanna see our foosball table? Nah, only kidding. We’re a made-up
 agency being used as an example for the Piccalilli course,
-[Learn Eleventy From Scratch](https://piccalil.li/course/learn-eleventy-from-scratch/).
+[Learn Eleventy From Scratch](https://learneleventyfromscratch.com).
 ```
 
 Pretty standard stuff here. All I’ll do is remind you that if you set a custom `permalink`, you need to add `index.html` at the end, or Eleventy will create a plain text file called `about-us`!
