--- a/docs/lesson/15.md
+++ b/docs/lesson/15.md
@@ -1,5 +1,7 @@
 # Lesson 15: Adding our work landing page
 
+<ContentWarning />
+ 
 As I said in the last lesson, repetition is super useful for committing stuff to memory. So let’s put together our ‘work’ landing page using knowledge we already have.
 
 ## Add a work landing layout
