--- a/docs/lesson/16.md
+++ b/docs/lesson/16.md
@@ -1,5 +1,7 @@
 # Lesson 16: Creating a work item page
 
+<ContentWarning />
+ 
 The first part of this lesson is another chance to apply what we’ve learned previously by creating our work item page.
 
 We’ll then go one step further and learn how you can create relationships with content by linking team members to the items they worked on.
