--- a/docs/lesson/17.md
+++ b/docs/lesson/17.md
@@ -1,5 +1,7 @@
 # Lesson 17: Meta info, RSS feeds and module recap
 
+<ContentWarning />
+ 
 With that work item in the last lesson, we’ve nearly finished our HTML-only build of this website. In fact, right now, you have a fully functional website that you could comfortably push live. Nice work!
 
 To wrap up this first module of the course, we’re going to dot the i’s and cross the t’s by adding some meta info and an RSS feed.
