--- a/docs/lesson/18.md
+++ b/docs/lesson/18.md
@@ -1,5 +1,7 @@
 # Lesson 18: Setting up Gulp
 
+<ContentWarning />
+ 
 To make this site look good, we’re going to add some CSS and fonts. We also want to optimise our images. To do this, we’re going to introduce an **asset pipeline**, which is a process that takes our source code, or source assets, and converts them into something much more production-friendly. To achieve that, we’re going to use the popular task-runner, [Gulp](https://gulpjs.com/).
 
 ## What is Gulp?
