--- a/docs/lesson/19.md
+++ b/docs/lesson/19.md
@@ -1,5 +1,7 @@
 # Lesson 19: Setting up Sass
 
+<ContentWarning />
+ 
 Before we get into this one: it is a pretty _intense_ lesson, so if you felt like you need a break already, now is the time to have one!
 
 For this project’s CSS, we’re going to be using Sass. If you’ve never heard of it, you’ll find a really good summary on the [Sass home page](https://sass-lang.com/):
