--- a/docs/lesson/2.md
+++ b/docs/lesson/2.md
@@ -1,5 +1,7 @@
 # Lesson 2: Hello world
 
+<ContentWarning />
+ 
 Now we have a better idea of what Eleventy is and have the tools we need to get started, let’s make something that we can see in the browser.
 
 Remember dotfiles from the last lesson? Well now we’re going to add the most important dotfile of this entire project: `.eleventy.js`.
