--- a/docs/lesson/20.md
+++ b/docs/lesson/20.md
@@ -1,5 +1,7 @@
 # Lesson 20: Setting up fonts
 
+<ContentWarning />
+ 
 There’s a real performance benefit to serving fonts locally, especially in terms of latency and cache control, so that’s what we’re going to do in this lesson.
 
 This certainly isn’t a crucial strategy—especially in the context of our website project—but I wanted to show you how useful Gulp is.
