--- a/docs/lesson/21.md
+++ b/docs/lesson/21.md
@@ -1,5 +1,7 @@
 # Lesson 21: Setting up images
 
+<ContentWarning />
+ 
 At the moment, Eleventy handles our images with passthrough copy. This is fine, really, because I’ve already optimised the images for us in the starter files. It’s a good idea, however, to let Gulp improve things for us.
 
 In this last lesson of the module, we’re going to relieve Eleventy of its duty and task Gulp with processing, optimising and then distributing our images for us.
