--- a/docs/lesson/22.md
+++ b/docs/lesson/22.md
@@ -1,5 +1,7 @@
 # Lesson 22: Global CSS and design tokens
 
+<ContentWarning />
+ 
 Right, here we are, in the **final module** of this course. This is actually my favourite part—writing CSS.
 
 Of course I enjoy Eleventy, but I’m a designer by trade, so the part where we make stuff look good is naturally going to be the part I enjoy the most.
