--- a/docs/lesson/23.md
+++ b/docs/lesson/23.md
@@ -1,5 +1,7 @@
 # Lesson 23: Styling global blocks
 
+<ContentWarning />
+ 
 We’re going to style up the site header, site footer and primary navigation in this lesson. But before we dig into writing some CSS, we need to make some adjustments to our base layout.
 
 You might have noticed that there’s a fancy dotted border/shadow on the home page now. Well, this is _fine_, but it also causes some horizontal overflow issues in certain environments. In order to fix that, we need to add a site wrap to hide `overflow-x`.
@@ -21,7 +23,7 @@ Replace it with the following:
 
   <footer role="contentinfo" class="site-foot">
     <div class="wrapper">
-      <p>This is a made up agency for the course, <a href="https://piccalil.li/course/learn-eleventy-from-scratch/">“Learn Eleventy From Scratch”</a>.</p>
+      <p>This is a made up agency for the course, <a href="https://learneleventyfromscratch.com">“Learn Eleventy From Scratch”</a>.</p>
     </div>
   </footer>
 </div>
