--- a/docs/lesson/24.md
+++ b/docs/lesson/24.md
@@ -1,5 +1,7 @@
 # Lesson 24: Styling the skip link
 
+<ContentWarning />
+ 
 A skip link allows a user to skip past the header and navigation and jump straight to the `<main>` element. At the moment, ours is very visible, but we’re going to visually hide it _until_ it is focused.
 
 When it’s focused, it’ll look the same as the buttons on the site, so the first thing we’ll do in this lesson is style those.
