--- a/docs/lesson/25.md
+++ b/docs/lesson/25.md
@@ -1,5 +1,7 @@
 # Lesson 25: Home page intro
 
+<ContentWarning />
+ 
 [CSS Grid](https://css-tricks.com/snippets/css/complete-guide-grid/) is a powerful layout tool that’s supported by the vast majority of browsers. Historically, it’s proven pretty difficult for folks to get their heads around, including me, so let’s try to change that.
 
 In this lesson, I’m going to teach you how to build a pretty cool layout with CSS Grid that’s a bit of a brain teaser. Hopefully by the end of this lesson, you’ll feel a bit more comfortable with CSS Grid than when you started.
