--- a/docs/lesson/26.md
+++ b/docs/lesson/26.md
@@ -1,5 +1,7 @@
 # Lesson 26: Home page panels
 
+<ContentWarning />
+ 
 Let’s dive right in with our first panel: the call to action. If you remember from earlier in the course, this is a global call to action that appears on most of the pages in our site.
 
 Thanks to the [CUBE CSS](https://piccalil.li/cube-css/) methodology, most of this panel styling is done. All we need to do now is add some compositional CSS and a utility that provides us with a consistent heading style.
