--- a/docs/lesson/27.md
+++ b/docs/lesson/27.md
@@ -1,5 +1,7 @@
 # Lesson 27: Styling the blog
 
+<ContentWarning />
+ 
 We’re getting very close to the end now and our site is starting to look really nice. Let’s tackle the whole blog section in this lesson.
 
 ## Creating a page header block
