--- a/docs/lesson/28.md
+++ b/docs/lesson/28.md
@@ -1,5 +1,7 @@
 # Lesson 28: Styling the about page
 
+<ContentWarning />
+ 
 Like the summary says, let’s make this one snappy. We’re nearly at the end of this course now and I bet you’re getting pretty tired, so it’s time for a quick win.
 
 Let’s go!
