--- a/docs/lesson/3.md
+++ b/docs/lesson/3.md
@@ -1,5 +1,7 @@
 # Lesson 3: Nunjucks basics
 
+<ContentWarning />
+ 
 A one liner in a markdown file isn’t all that useful, so let’s get some HTML on the page. We’re going to use [Nunjucks](https://mozilla.github.io/nunjucks/) to do this.
 
 ## What is Nunjucks?
