--- a/docs/lesson/30.md
+++ b/docs/lesson/30.md
@@ -1,5 +1,7 @@
 # Lesson 30: Styling the work section
 
+<ContentWarning />
+ 
 Here we are—the last lesson of the Front-End Build module. Let’s go out in style and apply what we’ve learned about [CUBE CSS](https://piccalil.li/cube-css/) to make the work section look ace.
 
 We discussed in the last lesson how, even now, the work section looks good. That’s down to a combination of the CSS methodology and a progressive enhancement approach.
