--- a/docs/lesson/31.md
+++ b/docs/lesson/31.md
@@ -1,5 +1,7 @@
 # Lesson 31: Wrapping Up
 
+<ContentWarning />
+ 
 We’ve got a **beautiful website** now, so let’s do some final tweaks to get it ready for production.
 
 ## Adding a social image and favicon
