--- a/docs/lesson/4.md
+++ b/docs/lesson/4.md
@@ -1,5 +1,7 @@
 # Lesson 4: Front matter basics
 
+<ContentWarning />
+ 
 Front Matter is like metadata for your page or template. It’s generally powered by [YAML](https://yaml.org/) that, when added between a set of `---`, lets you add extra content to a markdown file, template, or pretty much anything in Eleventy contexts.
 
 YAML is human readable, structured data that’s normally used in configuration files. It’s been used by SSGs for metadata for a long time because it’s generally a pretty-darn simple way for people to manage content.
@@ -90,6 +92,8 @@ Hopefully the JSON example makes that relationship make a bit more sense. What w
 
 Open `eleventy-from-scratch/src/_includes/layouts/home.html` and replace the existing `<article>` element with this one:
 
+::: v-pre
+
 ```html
 <article class="intro">
   <div class="[ intro__header ] [ radius frame ]">
@@ -121,3 +125,5 @@ Remember how our new content was indented under `intro`? This now gives us a han
 As your Front Matter gets larger and more complex, indenting and structuring the content becomes more and more useful. We’re going to get into even more detail with that as the course progresses.
 
 For now though, I hope you understand a bit more about Front Matter. Let’s move on and get that image working!
+
+:::
