--- a/docs/lesson/5.md
+++ b/docs/lesson/5.md
@@ -1,5 +1,7 @@
 # Lesson 5: Passthrough basics
 
+<ContentWarning />
+ 
 In our project folder we have an `src` folder and a `dist` folder. The `src` folder contains source files, which are mainly code, but also include static files like images.
 
 We’re going to want some of those static files in our output folder and luckily, Eleventy makes this pretty straightforward with [Passthrough file copy](https://www.11ty.dev/docs/copy/).
