--- a/docs/lesson/6.md
+++ b/docs/lesson/6.md
@@ -1,5 +1,7 @@
 # Lesson 6: Partials basics
 
+<ContentWarning />
+ 
 A very handy feature of Nunjucks is the ability to include partials in our templates. Partials are fragments of code that help to split our overall codebase up into smaller, more focused pieces. This makes our projects easier to manage.
 
 Using partials follows the [DRY principle](https://en.wikipedia.org/wiki/Don%27t_repeat_yourself), which stands for **Don’t Repeat Yourself**. With partials, we can write a snippet of reusable code once and then use it again and again around the site. We’re going to do a _lot_ of that in this course.
