--- a/docs/lesson/7.md
+++ b/docs/lesson/7.md
@@ -1,5 +1,7 @@
 # Lesson 7: Data basics
 
+<ContentWarning />
+ 
 Now that we’ve fragmented our code into partials, let’s make them more dynamic. We’re going to add some data to the site.
 
 Eleventy has a very useful [global data system](https://www.11ty.dev/docs/data-global/) that we’re going to tap into.
@@ -30,6 +32,8 @@ The <https://issue33.com> URL is the live site for the project you are building 
 Now that we have our data, we’re going to update the site header that we created in the last lesson. Open up `eleventy-from-scratch/src/_includes/partials/site-head.html`.
 
 Find the line `<a href="/" aria-label="Issue 33 - home" class="site-head__brand">` and replace it with this:
+
+::: v-pre
 
 ```javascript
 <a href="/" aria-label="{{ site.name }} - home" class="site-head__brand">
@@ -222,7 +226,7 @@ primaryCTA:
     context. You will learn a lot about Eleventy by building this site
     though. Take the course today!'
   buttonText: 'Buy a copy'
-  buttonUrl: 'https://piccalil.li/course/learn-eleventy-from-scratch/'
+  buttonUrl: 'https://learneleventyfromscratch.com'
 ```
 
 If you save that, open your browser at <http://localhost:8080> and scroll down, it should look like this:
@@ -236,3 +240,5 @@ Holy moly, that was a _lot_, right? We’ve really dug into some core concepts o
 We’re going to learn even more about Eleventy’s data capabilities later on because they are what sets it apart from other SSGs. Lots of power with lots of simplicity!
 
 Take a break, because the next lesson is a very important one.
+
+:::
