--- a/docs/lesson/9.md
+++ b/docs/lesson/9.md
@@ -1,6 +1,8 @@
 # Lesson 9: Adding remote data
 
-We talked about data in [lesson 7](/course/learn-eleventy-from-scratch/lesson/7/). In this lesson, we’re going to build on that knowledge, looking at how [JavaScript data files](https://www.11ty.dev/docs/data-js/) enable us to grab remote data and make it as accessible to our templates as static data like `site.json`.
+<ContentWarning />
+ 
+We talked about data in [lesson 7](/lesson/7/). In this lesson, we’re going to build on that knowledge, looking at how [JavaScript data files](https://www.11ty.dev/docs/data-js/) enable us to grab remote data and make it as accessible to our templates as static data like `site.json`.
 
 Why would we want to grab remote data though? Being able to work with remote data opens all sorts of opportunities to make our site **more dynamic**. It lets us use Eleventy as a front-end for a content management system. This capability empowers teams to make incredibly fast front-ends for websites that have complex, heavy content systems, which were previously quite slow.
 
@@ -36,6 +38,8 @@ npm install node-fetch
 ```
 
 Once that’s installed, create a new file inside your `_data` folder called `studio.js` and add the following to it:
+
+::: v-pre
 
 ```javascript
 const fetch = require('node-fetch');
@@ -185,3 +189,5 @@ Job done. You’ve now got some remote data on your home page. If you open up <h
 You should be feeling bloody awesome right now. Pulling in remote data into a static website is _cool as heck_ and **you** just did it.
 
 Next up, a recap of where we’re at because our home page is pretty much _done_.
+
+:::
