--- a/docs/lesson/29.md
+++ b/docs/lesson/29.md
@@ -1,5 +1,7 @@
 # Lesson 29: Add a contact page
 
+<ContentWarning />
+ 
 If you click around the site now, you’ll see that the front-end is pretty much done. Yes, we’ve still got the work pages to do, but even they look pretty darn good.
 
 One page that is very missing, though, is the contact page. So let’s demonstrate how flexible our Eleventy site really is, and put a contact page together in **under 3 minutes**.
@@ -32,9 +34,9 @@ title: 'Contact us'
 layout: 'layouts/page.html'
 ---
 
-This is a made up agency that is being used as a context for the project that you build when you [learn Eleventy from scratch](https://piccalil.li/course/learn-eleventy-from-scratch/), so ideally, you shouldn’t try to contact us.
+This is a made up agency that is being used as a context for the project that you build when you [learn Eleventy from scratch](https://learneleventyfromscratch.com), so ideally, you shouldn’t try to contact us.
 
-You can go ahead and purchase the course to build this page—amongst [the rest of the site](/)—by visiting [Piccalilli](https://piccalil.li/course/learn-eleventy-from-scratch/).
+You can go ahead and purchase the course to build this page—amongst [the rest of the site](/)—by visiting [Piccalilli](https://learneleventyfromscratch.com).
 ```
 
 Now, if you go to <http://localhost:8080/contact> you’ll see that it’s good to go!
