--- a/docs/lesson/11.md
+++ b/docs/lesson/11.md
@@ -205,9 +205,11 @@ In this diagram, we have our pagination page size set to 3, which means we want 
 
 With `pagination.items` each copy of the `blog.md` page will represent one of the batches. This is where we turn our attention to the `permalink`. Let’s zoom in on it:
 
+::: v-pre
 ```diff
 permalink: 'blog{% if pagination.pageNumber > 0 %}/page/{{ pagination.pageNumber }}{% endif %}/index.html'
 ```
+:::
 
 ::: tip
 
@@ -217,7 +219,11 @@ This trips a lot of people up, so cling on to that little bit of knowledge!
 
 :::
 
+::: v-pre
+
 Eleventy is very smart in that it allows us to use Nunjucks within our Front Matter. In our case, we’re testing to see if the current `pageNumber` is greater than 0. If it is, we’re adding a `/page/{{ pagination.pageNumber }}` to our permalink.
+
+:::
 
 Let’s break that down. Remember how the pagination system effectively creates several copies of the page, each time changing the value of `pagination.items` to be the current batch? For each of those pages, it needs to create a permalink too. If we changed nothing, the URLs that are generated on this project would be this:
 
