Fix some internal links

--- a/docs/lesson/12.md
+++ b/docs/lesson/12.md
@@ -159,15 +159,15 @@ Create a new file in your `posts` folder called `posts.json` and add the followi
 ```json
 {
   "layout": "layouts/post.html",
-  "permalink": "/blog/{{ title | slug }}/index.html"
+  "permalink": "https://piccalil.li/blog/{{ title | slug }}/index.html"
 }
 ```
 
 This is called a directory data file. Inside it, we’re telling all items added to `posts` that they should use the `post.html` layout **unless they specify a different layout in their Front Matter**.
 
-The second thing we’re doing is setting a permalink. Eleventy, by default, will use the filename and its directory to create a permalink. This means that, without our current setting, a post with a file name of `my-lovely-post.md` would have a permalink of `/posts/my-lovely-post/index.html`. We want all of our posts to live in the blog section though, so what we’re doing in the value for `permalink` is setting `/blog` as the root and then creating a slug from the post’s title.
+The second thing we’re doing is setting a permalink. Eleventy, by default, will use the filename and its directory to create a permalink. This means that, without our current setting, a post with a file name of `my-lovely-post.md` would have a permalink of `/posts/my-lovely-post/index.html`. We want all of our posts to live in the blog section though, so what we’re doing in the value for `permalink` is setting `https://piccalil.li/blog` as the root and then creating a slug from the post’s title.
 
-Now, if you open your browser at <http://localhost:8080/blog/laws-of-ux/> it should look like this:
+Now, if you open your browser at <http://localhost:8080https://piccalil.li/blog/laws-of-ux/> it should look like this:
 
 ![The blog post template with tags and formatted date](/images/courses/learn-eleventy-from-scratch/ss-blog-template.jpg)
 
