--- a/docs/lesson/13.md
+++ b/docs/lesson/13.md
@@ -78,7 +78,7 @@ Now, on **line 29**, just before the closing `</article>`, add the following:
 
 Hopefully you can see the power of partials here. All we needed to do once we grabbed our `recommendedPosts` was chuck them into our existing `post-list.html` partial. Lovely stuff.
 
-Now, if you open your browser at <http://localhost:8080/blog/laws-of-ux/> again and scroll down, it should look like this:
+Now, if you open your browser at <http://localhost:8080https://piccalil.li/blog/laws-of-ux/> again and scroll down, it should look like this:
 
 ![3 recommended posts, headed with “more from the blog” in amongst the rest of the blog post](/images/courses/learn-eleventy-from-scratch/ss-recommended-content.jpg)
 
