--- a/docs/lesson/22.md
+++ b/docs/lesson/22.md
@@ -6,7 +6,7 @@ Right, here we are, in the **final module** of this course. This is actually my 
 
 Of course I enjoy Eleventy, but I’m a designer by trade, so the part where we make stuff look good is naturally going to be the part I enjoy the most.
 
-If you haven’t already: I **strongly recommend** that you [read this post that I wrote on CUBE CSS](https://piccalil.li/blog/cube-css/).
+If you haven’t already: I **strongly recommend** that you [read this post that I wrote on CUBE CSS](https://piccalil.lihttps://piccalil.li/blog/cube-css/).
 
 The main reason is that **this is how we’re building the CSS for this site** and it’ll be really helpful to be aware of the methodology behind it.
 
