--- a/docs/lesson/23.md
+++ b/docs/lesson/23.md
@@ -86,7 +86,7 @@ Pro tip: we use `flex-shrink: 0` on the `&__brand` element. This prevents it get
 
 When we use `flex-shrink: 0`, we’re effectively stopping that element from being able to shrink in these scenarios.
 
-You might have also noticed that this element uses `margin-inline-end`, too. This is called a [logical property](https://piccalil.li/tutorial/css-logical-properties/).
+You might have also noticed that this element uses `margin-inline-end`, too. This is called a [logical property](https://piccalil.lihttps://piccalil.li/tutorial/css-logical-properties/).
 
 :::
 
