--- a/docs/lesson/27.md
+++ b/docs/lesson/27.md
@@ -6,7 +6,7 @@ We’re getting very close to the end now and our site is starting to look reall
 
 ## Creating a page header block
 
-This block is almost hilariously tiny. Because of our CSS methodology—[CUBE CSS](https://piccalil.li/blog/cube-css)—we only have to add 3 lines of CSS here.
+This block is almost hilariously tiny. Because of our CSS methodology—[CUBE CSS](https://piccalil.lihttps://piccalil.li/blog/cube-css)—we only have to add 3 lines of CSS here.
 
 Create a new file in your `blocks` folder called `_page-header.scss` and add the following to it:
 
@@ -90,7 +90,7 @@ Then, open up `eleventy-from-scratch/src/_includes/layouts/post.html` and add th
 {% set pageCriticalStyles = ['css/page.css'] %}
 ```
 
-Now, if you load up <http://localhost:8080/blog> it should look like this:
+Now, if you load up <http://localhost:8080https://piccalil.li/blog> it should look like this:
 
 ![A page header with white background leads a list of links with large text on a teal background](/images/courses/learn-eleventy-from-scratch/ss-post-list-styled.jpg)
 
@@ -199,7 +199,7 @@ Let’s add that to our critical page CSS. Open up `eleventy-from-scratch/src/sc
 @import 'blocks/page-content';
 ```
 
-Now, when you look in your browser at <http://localhost:8080/blog/laws-of-ux/>, it should look like this:
+Now, when you look in your browser at <http://localhost:8080https://piccalil.li/blog/laws-of-ux/>, it should look like this:
 
 ![A blog post looking all lovely and styled](/images/courses/learn-eleventy-from-scratch/ss-blog-post-styled.jpg)
 
