--- a/docs/lesson/28.md
+++ b/docs/lesson/28.md
@@ -10,7 +10,7 @@ Let’s go!
 
 The about page is actually pretty much ready to go. All we need to add is styles for the team members. The first part of that is the auto grid that lays out those people items.
 
-I love this upcoming utility and wrote a [pretty detailed tutorial about it here on this site](https://piccalil.li/tutorial/create-a-responsive-grid-layout-with-no-media-queries-using-css-grid/).
+I love this upcoming utility and wrote a [pretty detailed tutorial about it here on this site](https://piccalil.lihttps://piccalil.li/tutorial/create-a-responsive-grid-layout-with-no-media-queries-using-css-grid/).
 
 Let’s add the code. Create a new file in your `utilities` folder called `_auto-grid.scss`:
 
@@ -20,7 +20,7 @@ Let’s add the code. Create a new file in your `utilities` folder called `_auto
   Set the minimum item size with `--auto-grid-min-size` and you’ll
   get a fully responsive grid with no media queries.
 
-  https://piccalil.li/tutorial/create-a-responsive-grid-layout-with-no-media-queries-using-css-grid/
+  https://piccalil.lihttps://piccalil.li/tutorial/create-a-responsive-grid-layout-with-no-media-queries-using-css-grid/
 */
 .auto-grid {
   display: grid;
@@ -51,7 +51,7 @@ Create a new file in your `blocks` folder called `_people.scss` and add the foll
 }
 ```
 
-This is [CUBE CSS](https://piccalil.li/blog/cube-css) in a nutshell. We have a utility that does one job and does it well, and a compositional block creates some context for it.
+This is [CUBE CSS](https://piccalil.lihttps://piccalil.li/blog/cube-css) in a nutshell. We have a utility that does one job and does it well, and a compositional block creates some context for it.
 
 Let’s add that to our critical CSS. Open up `eleventy-from-scratch/src/scss/critical.scss` and on **line 83**, add the following, with the other block `@import` statements:
 
