Fix inline code snippet in lesson 19

--- a/docs/lesson/19.md
+++ b/docs/lesson/19.md
@@ -361,7 +361,11 @@ I urge you to read [this post about it on the Filament Group Blog](https://www.f
 
 ## Asset hashing
 
+::: v-pre
+
 Ok, last bit of this _long_ lesson. When we add all of this CSS to the page, we’re referencing `{{ assetHash }}` a lot. We need to define that.
+
+:::
 
 Open up `eleventy-from-scratch/src/_includes/layouts/base.html` and add the following **right at the top of the file**:
 
