Fix two more inline code snippets

--- a/docs/lesson/3.md
+++ b/docs/lesson/3.md
@@ -78,8 +78,12 @@ This is our **base template**. All future templates will **extend** this templat
 
 But first let’s zoom in on two areas of interest in this snippet:
 
+::: v-pre
+
 1. The `{{ title }}` part prints the yet to be defined `title` variable on the page. It’s a bit like a `${title}` in JavaScript, or the `<?php echo $title; ?>` in PHP.
 2. The `{% block content %}{% endblock %}` area is really interesting. It essentially lets us create a named placeholder. If a template that extends `base.html` also puts content inside a `{% block content %}{% endblock %}`, it will render inside that block on `base.html`. This is _super_ handy for complex templates, because you can set as many `{% block %}` elements as you like.
+
+:::
 
 ::: tip
 
@@ -118,7 +122,11 @@ The first thing this does is tell our home template to extend the `base.html` te
 
 After this comes the `{% block %}` which we discussed earlier.
 
+::: v-pre
+
 Inside the `{% block %}`, we’ve added an article which contains the title, followed by `{{ content | safe }}`. This will render the markdown content, which for us currently, is “Hello, world”.
+
+:::
 
 Because it’s markdown, it will be now converted to HTML and this is where `safe` kicks in.
 
