Set link. Fixes #4

--- a/docs/lesson/22.md
+++ b/docs/lesson/22.md
@@ -14,9 +14,9 @@ The main reason is that **this is how we’re building the CSS for this site** a
 
 The first thing we need to do in this module is apply our starter files, just like we did right at the start of the course. This just gets some of the more boring aspects like configuration out of the way.
 
-<a href="{{ starterFiles }}" class="button">Download starter files</a>
+<a href="https://piccalilli.s3.eu-west-2.amazonaws.com/eleventy-from-scratch/eleventy-from-scratch-front-end-build-starter-files.zip" class="button">Download starter files</a>
 
-Download the [starter files]({{starterFiles }}) and **completely replace** `eleventy-from-scratch/src/scss` with the `scss` folder in the ZIP archive that you downloaded.
+Download the [starter files](https://piccalilli.s3.eu-west-2.amazonaws.com/eleventy-from-scratch/eleventy-from-scratch-front-end-build-starter-files.zip) and **completely replace** `eleventy-from-scratch/src/scss` with the `scss` folder in the ZIP archive that you downloaded.
 
 Your `eleventy-from-scratch/src/scss` folder should now look like this:
 
