--- a/docs/lesson/11.md
+++ b/docs/lesson/11.md
@@ -351,9 +351,9 @@ Good gosh, that was a big one wasn’t it? So much has been learned about the in
 
 The pagination system alone enables all sorts of opportunities—especially when Eleventy is used as the front-end of a headless CMS.
 
-If you go to <http://localhost:8080https://piccalil.li/blog/> now, you should see something that looks like this:
+If you go to <http://localhost:8080/blog/> now, you should see something that looks like this:
 
-![A list of posts with an 'older posts' link that represents pagination](/images/courses/learn-eleventy-from-scratchhttps://piccalil.li/blog-feed.jpg)
+![A list of posts with an 'older posts' link that represents pagination](/images/courses/learn-eleventy-from-scratch/blog-feed.jpg)
 
 If you go to <http://localhost:8080/tag/design-thinking/>, you should see something that looks like this:
 
