--- a/docs/lesson/7.md
+++ b/docs/lesson/7.md
@@ -66,7 +66,7 @@ In your `_data` folder, create a new file called `navigation.json` and add the f
     },
     {
       "text": "Blog",
-      "url": "https://piccalil.li/blog/"
+      "url": "/blog/"
     },
     {
       "text": "Contact",
