Regex Modified - Lesson 19

--- a/docs/lesson/19.md
+++ b/docs/lesson/19.md
@@ -69,7 +69,7 @@ const calculateOutput = ({history}) => {
   let response = './dist/css';
 
   // Get everything after the last slash
-  const sourceFileName = /[^/]*$/.exec(history[0])[0];
+  const sourceFileName = /[^(/|\\)]*$/.exec(history[0])[0];
 
   // If this is critical CSS though, we want it to go
   // to the _includes directory, so nunjucks can include it
@@ -125,7 +125,7 @@ Lastly, we pass it to our `calculateOutput` which will determine if it is critic
 
 ## Letting Eleventy see our critical CSS
 
-By default, Eleventy will ignore everthing that we tell git to ignore with `.gitignore`. 99% of the time, we wouldn’t even need to worry about this, but because we’re ignoring `eleventy-from-scratch/src/_includes/css` in our `.gitinore` file, Eleventy won’t see it. This creates an issue because Eleventy won’t be able to directly include our critical CSS on the page, like this: `{% include "css/critical.css" %}`.
+By default, Eleventy will ignore everthing that we tell git to ignore with `.gitignore`. 99% of the time, we wouldn’t even need to worry about this, but because we’re ignoring `eleventy-from-scratch/src/_includes/css` in our `.gitignore` file, Eleventy won’t see it. This creates an issue because Eleventy won’t be able to directly include our critical CSS on the page, like this: `{% include "css/critical.css" %}`.
 
 Luckily, there’s a simple workaround. Open up `eleventy-from-scratch/.eleventy.js` and add the following just before the `return` block, around line 43:
 
