Add missing line break + fix indent

--- a/docs/lesson/3.md
+++ b/docs/lesson/3.md
@@ -110,11 +110,12 @@ Now that we’ve set up our base template, let’s add a template for our home p
 Inside `eleventy-from-scratch/src/_includes/layouts` add a new file called `home.html` and add the following HTML to it:
 
 ```html
-{% extends "layouts/base.html" %} {% block content %}
-<article>
-  <h1>{{ title }}</h1>
-  {{ content | safe }}
-</article>
+{% extends "layouts/base.html" %} 
+{% block content %}
+  <article>
+    <h1>{{ title }}</h1>
+    {{ content | safe }}
+  </article>
 {% endblock %}
 ```
 
