Fix broken link

--- a/docs/lesson/31.md
+++ b/docs/lesson/31.md
@@ -108,7 +108,7 @@ This wires up our `htmlMinTransform` Transform, only if we are in production mod
 
 You can deploy this site **wherever you want** because it’s a static site. You can also deploy to [Netlify](https://netlify.com/) for **free**.
 
-[Read this handy guide on deploying to Netlify](https://www.netlify.comhttps://piccalil.li/blog/2016/10/27/a-step-by-step-guide-deploying-a-static-site-or-single-page-app/). It’ll give you all the info you need.
+[Read this handy guide on deploying to Netlify](https://www.netlify.com/blog/2016/10/27/a-step-by-step-guide-deploying-a-static-site-or-single-page-app/). It’ll give you all the info you need.
 
 For now, though, let’s give Netlify a helping hand. Create a new file called `eleventy-from-scratch/netlify.toml` and add the following to it:
 
