--- a/docs/lesson/1.md
+++ b/docs/lesson/1.md
@@ -26,7 +26,7 @@ Still confused about what Eleventy is? Don’t sweat. I promise, by the end of t
 
 Before we start building, let’s make sure you have the right tools for the job.
 
-If you already have a terminal and Node.js running, you can [skip this section](#heading-starting-from-scratch).
+If you already have a terminal and Node.js running, you can [skip this section](#starting-from-scratch).
 
 You can use whatever text editor or IDE that you want to use for this course. You must however, make sure that you have a terminal installed:
 
