Fix links to CUBE CSS article

--- a/docs/lesson/27.md
+++ b/docs/lesson/27.md
@@ -6,7 +6,7 @@ We’re getting very close to the end now and our site is starting to look reall
 
 ## Creating a page header block
 
-This block is almost hilariously tiny. Because of our CSS methodology—[CUBE CSS](https://piccalil.lihttps://piccalil.li/blog/cube-css)—we only have to add 3 lines of CSS here.
+This block is almost hilariously tiny. Because of our CSS methodology—[CUBE CSS](https://piccalil.li/cube-css/)—we only have to add 3 lines of CSS here.
 
 Create a new file in your `blocks` folder called `_page-header.scss` and add the following to it:
 
