--- a/docs/lesson/28.md
+++ b/docs/lesson/28.md
@@ -51,7 +51,7 @@ Create a new file in your `blocks` folder called `_people.scss` and add the foll
 }
 ```
 
-This is [CUBE CSS](https://piccalil.lihttps://piccalil.li/blog/cube-css) in a nutshell. We have a utility that does one job and does it well, and a compositional block creates some context for it.
+This is [CUBE CSS](https://piccalil.li/cube-css/) in a nutshell. We have a utility that does one job and does it well, and a compositional block creates some context for it.
 
 Let’s add that to our critical CSS. Open up `eleventy-from-scratch/src/scss/critical.scss` and on **line 83**, add the following, with the other block `@import` statements:
 
