fix broken link in example

--- a/docs/lesson/27.md
+++ b/docs/lesson/27.md
@@ -199,7 +199,7 @@ Let’s add that to our critical page CSS. Open up `eleventy-from-scratch/src/sc
 @import 'blocks/page-content';
 ```
 
-Now, when you look in your browser at <http://localhost:8080https://piccalil.li/blog/laws-of-ux/>, it should look like this:
+Now, when you look in your browser at [http://localhost:8080/blog/laws-of-ux/](http://localhost:8080/blog/laws-of-ux/), it should look like this:
 
 ![A blog post looking all lovely and styled](/images/courses/learn-eleventy-from-scratch/ss-blog-post-styled.jpg)
 
