--- a/docs/lesson/28.md
+++ b/docs/lesson/28.md
@@ -10,7 +10,7 @@ Let’s go!
 
 The about page is actually pretty much ready to go. All we need to add is styles for the team members. The first part of that is the auto grid that lays out those people items.
 
-I love this upcoming utility and wrote a [pretty detailed tutorial about it here on this site](https://piccalil.lihttps://piccalil.li/tutorial/create-a-responsive-grid-layout-with-no-media-queries-using-css-grid/).
+I love this upcoming utility and wrote a [pretty detailed tutorial about it here on this site](https://piccalil.li/tutorial/create-a-responsive-grid-layout-with-no-media-queries-using-css-grid/).
 
 Let’s add the code. Create a new file in your `utilities` folder called `_auto-grid.scss`:
 
