--- a/docs/lesson/27.md
+++ b/docs/lesson/27.md
@@ -90,7 +90,7 @@ Then, open up `eleventy-from-scratch/src/_includes/layouts/post.html` and add th
 {% set pageCriticalStyles = ['css/page.css'] %}
 ```
 
-Now, if you load up <http://localhost:8080https://piccalil.li/blog> it should look like this:
+Now, if you load up <http://localhost:8080/blog> it should look like this:
 
 ![A page header with white background leads a list of links with large text on a teal background](/images/courses/learn-eleventy-from-scratch/ss-post-list-styled.jpg)
 
